# cxx-cross-platform

./: Makefile  README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
project/: cookiecutter.json
project/{{project_slug}}/: .clang-format  .clang-format-ignore  .gitignore  CMakeLists.txt  README.md  README_en.md
project/{{project_slug}}/cmake/: GetCPM.cmake
project/{{project_slug}}/cmake/preset/: base.json
project/{{project_slug}}/cmake/toolchain/: ios.cmake
{{cookiecutter.project_slug}}/: .clang-format-ignore  .cmake-format  .pre-commit-config.yaml  CMakeLists.txt  README.md  pyproject.toml  setup.sh
{{cookiecutter.project_slug}}/.github/workflows/: cmake-ci.yml
{{cookiecutter.project_slug}}/cmake/: ccache.cmake  message.cmake  version.cmake  version.h.in
{{cookiecutter.project_slug}}/cmake/lifecycle/: post_project.cmake  pre_project.cmake
{{cookiecutter.project_slug}}/cmake/preset/: base.json  ios.json  macos.json
{{cookiecutter.project_slug}}/cmake/toolchain/: ios.cmake
{{cookiecutter.project_slug}}/docs/: issue.md
{{cookiecutter.project_slug}}/example/: CMakeLists.txt  example.cpp
{{cookiecutter.project_slug}}/include/{{cookiecutter.project_slug}}/: {{cookiecutter.project_slug}}.h
{{cookiecutter.project_slug}}/src/: CMakeLists.txt
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: CMakeLists.txt  {{cookiecutter.project_slug}}.cpp
{{cookiecutter.project_slug}}/unittest/: CMakeLists.txt  cxx_project_name_unittest.cpp
